set(TEST_PROJECT_NAME ${PROJECT_NAME}-unit-tests)
add_executable(${TEST_PROJECT_NAME}
        AccountAllowanceApproveTransactionUnitTests.cc
        AccountAllowanceDeleteTransactionUnitTests.cc
        AccountBalanceQueryUnitTests.cc
        AccountBalanceUnitTests.cc
        AccountCreateTransactionUnitTests.cc
        AccountDeleteTransactionUnitTests.cc
        AccountIdUnitTests.cc
        AccountInfoQueryUnitTests.cc
        AccountInfoUnitTests.cc
        AccountRecordsQueryUnitTests.cc
        AccountRecordsUnitTests.cc
        AccountStakersQueryUnitTests.cc
        AccountUpdateTransactionUnitTests.cc
        AddressBookQueryUnitTests.cc
        AssessedCustomFeesUnitTests.cc
        ChunkedTransactionUnitTests.cc
        ClientUnitTests.cc
        ContractByteCodeQueryUnitTests.cc
        ContractCallQueryUnitTests.cc
        ContractCreateFlowUnitTests.cc
        ContractCreateTransactionUnitTests.cc
        ContractDeleteTransactionUnitTests.cc
        ContractExecuteTransactionUnitTests.cc
        ContractFunctionParametersUnitTests.cc
        ContractFunctionResultUnitTests.cc
        ContractFunctionSelectorUnitTests.cc
        ContractIdUnitTests.cc
        ContractInfoQueryUnitTests.cc
        ContractInfoUnitTests.cc
        ContractLogInfoUnitTests.cc
        ContractNonceInfoUnitTests.cc
        ContractUpdateTransactionUnitTests.cc
        CustomFixedFeeUnitTests.cc
        CustomFractionalFeeUnitTests.cc
        CustomRoyaltyFeeUnitTests.cc
        DelegateContractIdUnitTests.cc
        ECDSAsecp256k1PrivateKeyUnitTests.cc
        ECDSAsecp256k1PublicKeyUnitTests.cc
        ED25519PrivateKeyUnitTests.cc
        ED25519PublicKeyUnitTests.cc
        EthereumFlowUnitTests.cc
        EthereumTransactionUnitTests.cc
        EthereumTransactionDataEip1559UnitTests.cc
        EthereumTransactionDataLegacyUnitTests.cc
        EvmAddressUnitTests.cc
        ExchangeRateUnitTests.cc
        FeeAssessmentMethodUnitTests.cc
        FileAppendTransactionUnitTests.cc
        FileContentsQueryUnitTests.cc
        FileCreateTransactionUnitTests.cc
        FileDeleteTransactionUnitTests.cc
        FileIdUnitTests.cc
        FileInfoQueryUnitTests.cc
        FileInfoUnitTests.cc
        FileUpdateTransactionUnitTests.cc
        FreezeTransactionUnitTests.cc
        NodeCreateTransactionUnitTests.cc
        NodeDeleteTransactionUnitTests.cc
        NodeUpdateTransactionUnitTests.cc
        HbarAllowanceUnitTests.cc
        HbarUnitTests.cc
        HbarTransferUnitTests.cc
        KeyListUnitTests.cc
        LedgerIdUnitTests.cc
        NetworkUnitTests.cc
        NetworkVersionInfoUnitTests.cc
        NftIdUnitTests.cc
        NodeAddressUnitTests.cc
        PrngTransactionUnitTests.cc
        ProxyStakerUnitTests.cc
        ScheduleCreateTransactionUnitTests.cc
        ScheduleDeleteTransactionUnitTests.cc
        ScheduleIdUnitTests.cc
        ScheduleInfoQueryUnitTests.cc
        ScheduleInfoUnitTests.cc
        ScheduleSignTransactionUnitTests.cc
        SemanticVersionUnitTests.cc
        StakingInfoUnitTests.cc
        SystemDeleteTransactionUnitTests.cc
        SystemUndeleteTransactionUnitTests.cc
        TokenAllowanceUnitTests.cc
        TokenAssociateTransactionUnitTests.cc
        TokenAssociationUnitTests.cc
        TokenBurnTransactionUnitTests.cc
        TokenCreateTransactionUnitTests.cc
        TokenDeleteTransactionUnitTests.cc
        TokenDissociateTransactionUnitTests.cc
        TokenFeeScheduleUpdateTransactionUnitTests.cc
        TokenFreezeTransactionUnitTests.cc
        TokenGrantKycTransactionUnitTests.cc
        TokenIdUnitTests.cc
        TokenInfoQueryUnitTests.cc
        TokenInfoUnitTests.cc
        TokenMintTransactionUnitTests.cc
        TokenNftAllowanceUnitTests.cc
        TokenNftInfoQueryUnitTests.cc
        TokenNftTransferUnitTests.cc
        TokenPauseTransactionUnitTests.cc
        TokenRejectTransactionUnitTests.cc
        TokenRevokeKycTransactionUnitTests.cc
        TokenSupplyTypeUnitTests.cc
        TokenTransferUnitTests.cc
        TokenTypeUnitTests.cc
        TokenUnfreezeTransactionUnitTests.cc
        TokenUnpauseTransactionUnitTests.cc
        TokenUpdateTransactionUnitTests.cc
        TokenWipeTransactionUnitTests.cc
        TopicCreateTransactionUnitTests.cc
        TopicDeleteTransactionUnitTests.cc
        TopicIdUnitTests.cc
        TopicInfoQueryUnitTests.cc
        TopicInfoUnitTests.cc
        TopicMessageChunkUnitTests.cc
        TopicMessageQueryUnitTests.cc
        TopicMessageSubmitTransactionUnitTests.cc
        TopicMessageUnitTests.cc
        TopicUpdateTransactionUnitTests.cc
        TransactionIdUnitTests.cc
        TransactionReceiptQueryUnitTests.cc
        TransactionReceiptUnitTests.cc
        TransactionRecordQueryUnitTests.cc
        TransactionRecordUnitTests.cc
        TransactionResponseUnitTests.cc
        TransactionUnitTests.cc
        TransferTransactionUnitTests.cc

        vectors/BIP39TestVectors.cc
        vectors/Hedera12WordMnemonicBIP39TestVectors.cc
        vectors/Hedera24WordMnemonicBIP39TestVectors.cc
        vectors/RFC8032TestVectors.cc
        vectors/SLIP10TestVectors.cc)

target_link_libraries(${TEST_PROJECT_NAME} PRIVATE gtest_main gtest ${PROJECT_NAME})
gtest_discover_tests(${TEST_PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE})

target_link_libraries(${TEST_PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)

file(COPY ${PROJECT_SOURCE_DIR}/addressbook/previewnet.pb
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/addressbook)
file(COPY ${PROJECT_SOURCE_DIR}/addressbook/testnet.pb
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/addressbook)
file(COPY ${PROJECT_SOURCE_DIR}/addressbook/mainnet.pb
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/addressbook)
